fixes social share on safari

--- a/_sass/components/_social-share.scss
+++ b/_sass/components/_social-share.scss
@@ -15,7 +15,7 @@
 	    }
 	}
 	svg {
-		height: auto;
+		height: 20px;
 		margin: 0.65rem 0 0.25rem 0.65rem;
     	width: 20px;
 	}
